@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.15) unstable; urgency=low
 
   * http-cache-choice: find more duplicates during cleanup
+  * handler: added AJP handler
 
  --
 
